# seam-carver

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md
include/: carver.hpp
src/: Carver.cpp  Main.cpp  carver.cpp  carver.hpp  main.cpp
